--- a/res/menu/dat_vag.xml
+++ b/res/menu/dat_vag.xml
@@ -5,5 +5,10 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    <item
+        android:id="@+id/iRoutine"
+        android:orderInCategory="1"
+        android:showAsAction="never"
+        android:title="@string/routine"/>
 
 </menu>
