--- a/res/layout/activity_routine.xml
+++ b/res/layout/activity_routine.xml
@@ -4,14 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:baselineAligned="false"
-    
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.vagoscorp.vccompost.Routine" >
     
-
-<!--     android:paddingLeft="@dimen/activity_horizontal_margin" -->
 <!-- 	 android:paddingRight="@dimen/activity_horizontal_margin" -->
 <!--     android:paddingTop="@dimen/activity_vertical_margin" -->
-<!--     android:paddingBottom="@dimen/activity_vertical_margin" -->
 
     <LinearLayout
         android:layout_width="0dp"
@@ -33,6 +31,7 @@
     </LinearLayout>
     
     <LinearLayout
+        android:id="@+id/intercamb"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
@@ -79,7 +78,7 @@
             android:id="@+id/ptextA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hello_world" />
+            android:text="Archivo Seccion A" />
 
         <Spinner
             android:id="@+id/spinnerA"
@@ -90,12 +89,82 @@
             android:id="@+id/ptextB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/hello_world" />
+            android:text="Archivo Seccion B" />
 
         <Spinner
             android:id="@+id/spinnerB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <CheckBox
+            android:id="@+id/espejo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/EspejoAB" />
+
+        <EditText
+            android:id="@+id/nombre"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Nombre Rutina" >
+
+<!--             <requestFocus /> -->
+        </EditText>
+
+        <Button
+            android:id="@+id/save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="Save"
+            android:text="@string/GuardarRutina" />
+
+<!--         <TextView -->
+<!--             android:id="@+id/textView1" -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="wrap_content" -->
+<!--             android:text="Selected pointA" /> -->
+
+<!--         <TextView -->
+<!--             android:id="@+id/pDataA" -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="0dp" -->
+<!--             android:text="=X=0.1=Y=0.1=R=60=/" /> -->
+
+<!--         <TextView -->
+<!--             android:id="@+id/textView2" -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="wrap_content" -->
+<!--             android:text="Selected pointB" /> -->
+
+<!--         <TextView -->
+<!--             android:id="@+id/pDataB" -->
+<!--             android:layout_width="match_parent" -->
+<!--             android:layout_height="0dp" -->
+<!--             android:text="=X=0.1=Y=0.1=R=60=/" /> -->
+
+        <Button
+            android:id="@+id/nRutina"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="Ejecutar"
+            android:text="@string/Ejecutar" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/PuntoIn"
+            android:textColor="#FFFF00"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/PuntoOut"
+            android:textColor="#FF0000"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
     </LinearLayout>
 
 </LinearLayout>
