--- a/res/layout/activity_routine.xml
+++ b/res/layout/activity_routine.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     android:baselineAligned="false"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingStart="@dimen/activity_horizontal_margin"
+    android:paddingEnd="0dp"
+    android:paddingRight="0dp"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.vagoscorp.vccompost.Routine" >
     
-<!-- 	 android:paddingRight="@dimen/activity_horizontal_margin" -->
 <!--     android:paddingTop="@dimen/activity_vertical_margin" -->
 
     <LinearLayout
@@ -78,7 +80,7 @@
             android:id="@+id/ptextA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Archivo Seccion A" />
+            android:text="@string/FileSA" />
 
         <Spinner
             android:id="@+id/spinnerA"
@@ -89,7 +91,7 @@
             android:id="@+id/ptextB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Archivo Seccion B" />
+            android:text="@string/FileSB" />
 
         <Spinner
             android:id="@+id/spinnerB"
@@ -106,7 +108,7 @@
             android:id="@+id/nombre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nombre Rutina" >
+            android:hint="@string/RnameH" >
 
 <!--             <requestFocus /> -->
         </EditText>
