--- a/res/layout/activity_save_rfiles.xml
+++ b/res/layout/activity_save_rfiles.xml
@@ -16,7 +16,7 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Nombre para los Archivos?" />
+        android:text="@string/FileNames" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
             android:layout_width="0dp"
             android:layout_weight="8"
             android:layout_height="wrap_content"
-            android:hint="nombre => nombreA, nombreB"
+            android:hint="@string/FileNamesH"
             android:ems="10" >
 
             <requestFocus />
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:onClick="Save"
-            android:text="Guardar" />
+            android:text="@string/GuardarRutina" />
 
     </LinearLayout>
 
