--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:gravity="right"
+            android:gravity="end"
             android:text="@string/Ser_Dat"
             android:textAppearance="?android:attr/textAppearanceLarge" />
     </LinearLayout>
